# esp32_nat_router_extended

./: CMakeLists.txt  README.md  a.js  doc.html  larger.csv  platformio.ini
.github/workflows/: release.yaml
src/: CMakeLists.txt  esp32_nat_router.c  http_server.c
src/pages/: about.html  advanced.html  apply.html  clients.html  config.html  index.css  index.html  index.js  lock.html  reset.html  result.html  router.js  scan.html  ui.js  unlock.html
src/pages/assets/: index-Be0pM9u9.js  index-CP4wvmsY.css  index-DUflLXBX.js  index-O1a2Fugk.css  index-iP8dXgYc.js  router-DuyDbDLs.js  ui-CGN5kbBo.js
src/urihandler/: abouthandler.c  advancedhandler.c  applyhandler.c  clientshandler.c  handler.c  handler.h  helper.c  indexhandler.c  lockhandler.c  otahandler.c  portmaphandler.c  resulthandler.c  scanhandler.c  scrapper.py  simple_handlers.c  statichandler.c  systemhandler.c  websocket_handlers.c  websocket_handlers.h  websocket_server.c  websocket_server.h
